# GameConsole

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: branch-name.yml
Core/Src/: main.c
assets/game1/: game1_tiles.c  game1_tiles.h  room0.c  room0.h  room0_entities.c  room0_entities.h  room0_tiles.c  room0_tiles.h  room1.c  room1.h  room1_entities.c  room1_entities.h
games/: game_api.h  game_registry.c  game_registry.h
games/game1/: Game_1.c  Game_1.h
games/game1/game1_audio/: game1_sfx.c  game1_sfx.h
games/game1/game1_camera/: game1_camera.c  game1_camera.h
games/game1/game1_entities/: game1_animation.c  game1_animation.h  game1_coin.c  game1_coin.h  game1_door.c  game1_door.h  game1_entities.c  game1_entities.h  game1_entity_common.c  game1_entity_common.h  game1_key.c  game1_key.h
games/game1/game1_input/: game1_input.c  game1_input.h
games/game1/game1_player/: game1_player.c  game1_player.h  game1_player_sprite.c  game1_player_sprite.h
games/game1/game1_render/: game1_render.c  game1_render.h
games/game1/game1_world/: game1_world.c  game1_world.h
games/game2/: Game_2.c  Game_2.h
games/game2/boost/: race_boost.c  race_boost.h
games/game2/camera/: race_camera.c  race_camera.h
games/game2/car/: race_car.c  race_car.h
games/game2/collisions/: race_collisions.c  race_collisions.h
games/game2/config/: race_config.h
games/game2/input/: race_input.c  race_input.h
games/game2/render/: race_render.c  race_render.h
games/game2/state/: race_state.c  race_state.h
games/game2/track/: race_track.c  race_track.h  race_track_layout.c  race_track_layout.h
games/game2/utils/: race_math.c  race_math.h
games/game3/: Game_3.c  Game_3.h
games/game3/game3_attacks/: game3_attacks.c  game3_attacks.h
games/game3/game3_camera/: game3_camera.c  game3_camera.h
games/game3/game3_enemy/: game3_enemy.c  game3_enemy.h
games/game3/game3_input/: game3_input.c  game3_input.h
games/game3/game3_player/: game3_player.c  game3_player.h
games/game3/game3_render/: game3_render.c  game3_render.h
games/game3/game3_spawner/: game3_spawner.c  game3_spawner.h
games/game3/game3_ui/: game3_ui.c  game3_ui.h
games/game3/game3_world/: game3_world.c  game3_world.h
games/game3/tests/: Makefile  test_game3_helpers.c
platform/lcd/Core/Inc/: LCD.h
platform/lcd/Core/Src/: LCD.c
shared/: InputHandler.c  InputHandler.h  Menu.c  Menu.h
